# chiron

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  chiron.spec  pyproject.toml  run.py
.github/workflows/: ci.yml
app/: api_client.py  cache.py  config.py  config_ng.py  layout.py  main.py  state.py
app/components/: __init__.py  appreciations_view.py  appreciations_view_ng.py  data_helpers.py  eleve_card.py  eleve_card_ng.py  llm_selector.py  llm_selector_ng.py  metric_card_ng.py  sidebar.py  synthese_editor.py  synthese_editor_ng.py
app/pages/: 1_import.py  2_review.py  2_syntheses.py  3_export.py  4_Prompt.py  export.py  home.py  import_page.py  prompt.py  references.py  syntheses.py
data/: custom_system_prompt.txt
data/ground_truth/: chiron_ground_truth.json
docs/: 01_architecture_technique.md  02_plan_implementation.md  03_README_chiron.md  adapter-format-bulletin.md  aipd-cadre.md  architecture.md  audit-2026-02.md  fiche_technique_rgpd.md  note-information-familles.md  plan_ameliorations.md  plan_corrections.md  plan_migration_nicegui.md  references.md  security_audit.md
hooks/: rthook_transformers.py
notebooks/: 01_parser_dev.ipynb  02_generation_test.ipynb  03_parser_benchmark.ipynb  03b_parser_tables_complexes.ipynb  04_production_simulation.ipynb  05_pdf_anonymization_test.ipynb  06_workflow_complet.ipynb  test_pseudonymisation_v2.ipynb
scripts/: build.py  debug_parse.py  run_api.py  run_app.py
src/: __init__.py
src/api/: __init__.py  config.py  dependencies.py  main.py
src/api/routers/: __init__.py  classes.py  eleves.py  exports.py  syntheses.py
src/core/: constants.py  data_loader.py  exceptions.py  logging_config.py  models.py  utils.py  validators.py
src/document/: __init__.py  anonymizer.py  bulletin_parser.py  debug_visualizer.py  mistral_parser.py  parser.py  patterns.py  pdf_generator.py  pdfplumber_parser.py  pseudonymization.py  templates.py  validation.py  yaml_template_parser.py
src/document/templates/: pronote_standard.yaml
src/generation/: __init__.py  generator.py  prompt_builder.py  prompts.py
src/llm/: README.md  __init__.py  base.py  config.py  manager.py  metrics.py  pricing.py  rate_limiter.py
src/llm/clients/: __init__.py  anthropic.py  mistral.py  openai.py
src/privacy/: __init__.py  config.py  pseudonymizer.py
src/services/: __init__.py  query_service.py  shared.py  synthese_service.py
src/storage/: __init__.py  config.py  connection.py  schemas.py
src/storage/repositories/: __init__.py  base.py  classe.py  eleve.py  synthese.py
src/utils/: async_helpers.py
tests/: conftest.py  test_data_deletion.py  test_pseudonymization_pipeline.py  test_pseudonymize_extraction.py  test_pseudonymizer.py  test_purge.py  test_validation.py
