[project]
name = "chiron"
version = "0.1.0"
description = "Assistant IA pour la préparation des conseils de classe"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.46.0",
    "duckdb>=1.4.0",
    "langdetect>=1.0.9",
    "marker-pdf>=1.10.1",
    "matplotlib>=3.10.7",
    "mistralai>=1.9.11",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "pdfservices-sdk>=4.2.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pypdf2>=3.0.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # Line too long (handled by formatter for code, ignored for comments)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
