[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "chiron"
version = "0.1.0"
description = "Assistant IA pour la préparation des conseils de classe"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.46.0",
    "cachetools>=5.0.0",
    "docling>=2.69.1",
    "duckdb>=1.4.0",
    "fastapi>=0.115.0",
    "fr-core-news-lg",
    "httpx>=0.27.0",
    "langdetect>=1.0.9",
    "marker-pdf>=1.10.1",
    "matplotlib>=3.10.7",
    "mistralai>=1.9.11",
    "nest-asyncio>=1.6.0",
    "nicegui>=2.0.0",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "pdfservices-sdk>=4.2.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pywebview>=5.0",
    "pymupdf>=1.26.7",
    "pypdf2>=3.0.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "python-multipart>=0.0.12",
    "reportlab>=4.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "streamlit>=1.40.0",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # Line too long (handled by formatter for code, ignored for comments)
]

[tool.ruff.lint.per-file-ignores]
"src/api/routers/*.py" = ["B008"]  # FastAPI Depends() pattern
"app/pages/*.py" = ["N999"]  # Streamlit: numbered page names (1_import, 2_syntheses, etc.)
"app/main.py" = ["E402"]  # sys.path manipulation before imports
"run.py" = ["E402"]  # sys.path manipulation before imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
fr-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-3.8.0/fr_core_news_lg-3.8.0-py3-none-any.whl" }
